--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
     <main class="micl-body">
       <section class="micl-pane">
         <header>
-          <p>{{ page.subtitle }}</p>
+          <p>{{ page.subtitle | markdownify }}</p>
           <img src="{{ page.logo | relative_url }}" alt="Mental Health and Human Rights Info">
         </header>
         <div class="micl-pane__columns">
