--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,15 +12,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/micl.css">
-    <link rel="stylesheet" href="css/hhri.css">
+    <link rel="stylesheet" href="css/home.css">
   </head>
   <body class="micl-window dark">
     <main class="micl-body">
       <section class="micl-pane">
         <header>
           <div>
-            <p>{{ page.subtitle1 | markdownify }}</p>
-            <p>{{ page.subtitle2 | markdownify }}</p>
+            <p>{{ page.subtitle1 }}</p>
+            <p>{{ page.subtitle2 }}</p>
           </div>
           <img src="{{ page.logo | relative_url }}" alt="Mental Health and Human Rights Info">
         </header>
