--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/home.css">
   </head>
   <body class="micl-window dark">
-    <main class="micl-body" style="flex-direction:column">
+    <main class="micl-body">
       <section class="micl-pane">
-        <header class="micl-pane__columns micl-pane__columns--stacked-to-expanded" style="column-gap:64px">
+        <header class="micl-pane__columns micl-pane__columns--stacked-to-expanded">
           <div class="micl-pane__column">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128 160" style="enable-background:new 0 0 128 160;" xml:space="preserve">
               <g>
