--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,7 @@
   font-display: swap;
 }
 
-body {
+.micl-window {
   max-inline-size: 1600px;
   margin-inline: auto;
   background: linear-gradient(to bottom, rgb(from var(--md-sys-color-surface) r g b / 0.7), var(--md-sys-color-surface))
