--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,19 +46,35 @@
             </svg>
           </div>
           <div class="micl-pane__column">
-            <p class="md-sys-typescale-display-medium">{{ page.title }}<p>
+            <p class="md-sys-typescale-display-medium">{{ page.title }}</p>
             <p class="md-sys-typescale-headline-medium">{{ page.subtitle1 }}</p>
             <p class="md-sys-typescale-headline-medium">{{ page.subtitle2 }}</p>
           </div>
         </header>
       </section>
-      <section>
-        <div class="micl-pane__columns">
-          <div class="micl-pane__column">
-            {{ content }}
+      <section class="micl-pane">
+        <div class="micl-card-filled">
+          <div class="micl-card__headline-m">
+            <h2>News</h2>
           </div>
-          <div class="micl-pane__column">
+        </div>
+        <div class="micl-card-filled">
+          <div class="micl-card__headline-m">
+            <h2>Training Manuals</h2>
           </div>
+          <p class="micl-card__supporting-text">For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors.</p>
+        </div>
+        <div class="micl-card-filled">
+          <div class="micl-card__headline-m">
+            <h2>Themes</h2>
+          </div>
+          <p class="micl-card__supporting-text">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
+        </div>
+        <div class="micl-card-filled">
+          <div class="micl-card__headline-m">
+            <h2>Other Resources</h2>
+          </div>
+          <p class="micl-card__supporting-text">In this section you will find other resources related to current conflicts, cooperation and tools to help survivors</p>
         </div>
       </section>
     </main>
