--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,24 +57,66 @@
           <div class="micl-card__headline-m">
             <h2>News</h2>
           </div>
+          <div class="micl-card__content">
+          </div>
         </div>
         <div class="micl-card-filled">
           <div class="micl-card__headline-m">
             <h2>Training Manuals</h2>
           </div>
           <p class="micl-card__supporting-text">For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors.</p>
+          <div class="micl-card__content">
+            <ul class="micl-list">
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image icon-gbv_women"></span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Women</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image icon-gbv_children"></span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Children</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image icon-gbv_men"></span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Boys and men</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image icon-gbv_no"></span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Kjønnsbasert vold</span>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="micl-card-filled">
           <div class="micl-card__headline-m">
             <h2>Themes</h2>
           </div>
           <p class="micl-card__supporting-text">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
+          <div class="micl-card__content">
+          </div>
         </div>
         <div class="micl-card-filled">
           <div class="micl-card__headline-m">
             <h2>Other Resources</h2>
           </div>
           <p class="micl-card__supporting-text">In this section you will find other resources related to current conflicts, cooperation and tools to help survivors</p>
+          <div class="micl-card__content">
+          </div>
         </div>
       </section>
     </main>
