--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@
             <ul class="micl-list">
               <li class="micl-list-item-one" tabindex="0">
                 <a href="" tabindex="-1">
-                  <span class="micl-list-item__image icon-gbv_women">&#xE913;</span>
+                  <span class="micl-list-item__image hhri-icon">&#xE913;</span>
                   <span class="micl-list-item__text">
                     <span class="micl-list-item__headline">Women</span>
                   </span>
@@ -77,7 +77,7 @@
               </li>
               <li class="micl-list-item-one" tabindex="0">
                 <a href="" tabindex="-1">
-                  <span class="micl-list-item__image icon-gbv_children">&#xE90D;</span>
+                  <span class="micl-list-item__image hhri-icon">&#xE90D;</span>
                   <span class="micl-list-item__text">
                     <span class="micl-list-item__headline">Children</span>
                   </span>
@@ -85,7 +85,7 @@
               </li>
               <li class="micl-list-item-one" tabindex="0">
                 <a href="" tabindex="-1">
-                  <span class="micl-list-item__image icon-gbv_men">&#xE90F;</span>
+                  <span class="micl-list-item__image hhri-icon">&#xE90F;</span>
                   <span class="micl-list-item__text">
                     <span class="micl-list-item__headline">Boys and men</span>
                   </span>
@@ -93,7 +93,7 @@
               </li>
               <li class="micl-list-item-one" tabindex="0">
                 <a href="" tabindex="-1">
-                  <span class="micl-list-item__image icon-gbv_no">&#xE910;</span>
+                  <span class="micl-list-item__image hhri-icon">&#xE910;</span>
                   <span class="micl-list-item__text">
                     <span class="micl-list-item__headline">Kjønnsbasert vold</span>
                   </span>
