--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,11 +60,12 @@
           <div class="micl-card__content">
           </div>
         </div>
+
         <div class="micl-card-filled">
           <div class="micl-card__headline-m">
             <h2>Training Manuals</h2>
           </div>
-          <p class="micl-card__supporting-text">For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors.</p>
+          <p class="micl-card__subhead">For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors.</p>
           <div class="micl-card__content">
             <ul class="micl-list">
               <li class="micl-list-item-one" tabindex="0">
@@ -102,20 +103,155 @@
             </ul>
           </div>
         </div>
+
         <div class="micl-card-filled">
           <div class="micl-card__headline-m">
             <h2>Themes</h2>
           </div>
-          <p class="micl-card__supporting-text">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
+          <p class="micl-card__subhead">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
           <div class="micl-card__content">
+            <ul class="micl-list">
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE914;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Gender Based Violence</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE902;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Children in armed conflict</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE923;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Post Traumatic Stress Disorder</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE924;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Refugees and asylum seekers</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE922;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Post Conflict Communities and Transitional Justice</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE92C;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Torture</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE90A;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Ethics in Psychosocial Work</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE916;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Helping the helpers</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE91A;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">LGBTIQ+ Rights</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE905;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Human Rights Defenders</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE906;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Disaster</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE92B;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Supporting Survivors of Human Rights Violations</span>
+                  </span>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
+
         <div class="micl-card-filled">
           <div class="micl-card__headline-m">
             <h2>Other Resources</h2>
           </div>
-          <p class="micl-card__supporting-text">In this section you will find other resources related to current conflicts, cooperation and tools to help survivors</p>
+          <p class="micl-card__subhead">In this section you will find other resources related to current conflicts, cooperation and tools to help survivors</p>
           <div class="micl-card__content">
+            <ul class="micl-list">
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE91D;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">3rd Nordic MHPSS Conference Oslo 2026</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-two" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE915;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Ресурси психічного здоров’я</span>
+                    <span class="micl-list-item__supporting-text">Ukraine Mental Health Resources</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE92A;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Are you a survivor?</span>
+                  </span>
+                </a>
+              </li>
+              <li class="micl-list-item-one" tabindex="0">
+                <a href="" tabindex="-1">
+                  <span class="micl-list-item__image hhri-icon">&#xE902;</span>
+                  <span class="micl-list-item__text">
+                    <span class="micl-list-item__headline">Children and War Foundation</span>
+                  </span>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
