--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,8 +61,8 @@
           </div>
         </div>
 
-        <div class="micl-card-filled">
-          <div class="micl-card__headline-m">
+        <div class="micl-card-outlined">
+          <div class="micl-card__headline-l">
             <h2>Training Manuals</h2>
           </div>
           <p class="micl-card__subhead">For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors.</p>
@@ -104,8 +104,8 @@
           </div>
         </div>
 
-        <div class="micl-card-filled">
-          <div class="micl-card__headline-m">
+        <div class="micl-card-outlined">
+          <div class="micl-card__headline-l">
             <h2>Themes</h2>
           </div>
           <p class="micl-card__subhead">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
@@ -211,8 +211,8 @@
           </div>
         </div>
 
-        <div class="micl-card-filled">
-          <div class="micl-card__headline-m">
+        <div class="micl-card-outlined">
+          <div class="micl-card__headline-l">
             <h2>Other Resources</h2>
           </div>
           <p class="micl-card__subhead">In this section you will find other resources related to current conflicts, cooperation and tools to help survivors</p>
