--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,7 @@
           <div class="micl-card__headline-l">
             <h2>Training Manuals</h2>
           </div>
-          <p class="micl-card__subhead">For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors.</p>
+          <p class="micl-card__supporting-text">For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors.</p>
           <div class="micl-card__content">
             <ul class="micl-list">
               <li class="micl-list-item-one" tabindex="0">
@@ -108,7 +108,7 @@
           <div class="micl-card__headline-l">
             <h2>Themes</h2>
           </div>
-          <p class="micl-card__subhead">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
+          <p class="micl-card__supporting-text">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
           <div class="micl-card__content">
             <ul class="micl-list">
               <li class="micl-list-item-one" tabindex="0">
@@ -215,7 +215,7 @@
           <div class="micl-card__headline-l">
             <h2>Other Resources</h2>
           </div>
-          <p class="micl-card__subhead">In this section you will find other resources related to current conflicts, cooperation and tools to help survivors</p>
+          <p class="micl-card__supporting-text">In this section you will find other resources related to current conflicts, cooperation and tools to help survivors</p>
           <div class="micl-card__content">
             <ul class="micl-list">
               <li class="micl-list-item-one" tabindex="0">
