--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,102 +111,16 @@
           <p class="micl-card__supporting-text">Covers the core topics of mental health and human rights violations in disaster, war, and conflict areas.</p>
           <div class="micl-card__content">
             <ul class="micl-list">
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE914;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Gender Based Violence</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE902;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Children in armed conflict</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE923;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Post Traumatic Stress Disorder</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE924;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Refugees and asylum seekers</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE922;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Post Conflict Communities and Transitional Justice</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE92C;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Torture</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE90A;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Ethics in Psychosocial Work</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE916;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Helping the helpers</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE91A;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">LGBTIQ+ Rights</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE905;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Human Rights Defenders</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE906;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Disaster</span>
-                  </span>
-                </a>
-              </li>
-              <li class="micl-list-item-one" tabindex="0">
-                <a href="" tabindex="-1">
-                  <span class="micl-list-item__image hhri-icon">&#xE92B;</span>
-                  <span class="micl-list-item__text">
-                    <span class="micl-list-item__headline">Supporting Survivors of Human Rights Violations</span>
-                  </span>
-                </a>
-              </li>
+              {% for item in page.theme_list %}
+                <li class="micl-list-item-one" tabindex="0">
+                  <a href="{{ item.link }}" tabindex="-1">
+                    <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
+                    <span class="micl-list-item__text">
+                      <span class="micl-list-item__headline">{{ item.title }}</span>
+                    </span>
+                  </a>
+                </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
