--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@
 
           {% for item in sorted_news limit:3 %}
             <div class="micl-card-filled" tabindex="0">
-              <img alt="{{ item.title }} class="micl-card__image" src="{{ item.url }}">
+              <img alt="{{ item.title }} class="micl-card__image" src="{{ item.image }}">
               <div class="micl-card__headline-m">
                 <h2>{{ item.title }}</h2>
               </div>
