--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -88,7 +88,7 @@
                         <span class="micl-list-item__text">
                           <span class="micl-list-item__headline">{{ item.title }}</span>
                           {% if item.text %}
-                            <span class="micl-list-item__supporting-text">{{ item.text }}</span>
+                            <span class="micl-list-item__supporting-text">{{ item.intro }}</span>
                           {% endif %}
                         </span>
                       </a>
