--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,7 +64,7 @@
               </div>
               <p class="micl-card__supporting-text">{{ item.date | date: "%d.%m.%Y" }}</p>
               <div class="micl-card__content">
-                <p>{{ item.text }}</p>
+                <p>{{ item.intro }}</p>
               </div>
             </div>
           {% endfor %}
@@ -88,7 +88,7 @@
                         <span class="micl-list-item__text">
                           <span class="micl-list-item__headline">{{ item.title }}</span>
                           {% if item.text %}
-                            <span class="micl-list-item__supporting-text">{{ item.intro }}</span>
+                            <span class="micl-list-item__supporting-text">{{ item.text }}</span>
                           {% endif %}
                         </span>
                       </a>
