--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,8 +63,8 @@
                 <h2>{{ item.title }}</h2>
               </div>
               <p class="micl-card__supporting-text">{{ item.date | date: "%d.%m.%Y" }}</p>
-              <div class="micl-card__content">
-                <p>{{ item.intro }}</p>
+              <div class="micl-card__content md-sys-typescale-body-medium">
+                <span>{{ item.intro }}</span>
               </div>
             </div>
           {% endfor %}
