--- a/css/home.css
+++ b/css/home.css
@@ -45,6 +45,9 @@
 .micl-pane:has(.hhri-news-section) {
   row-gap: 48px;
 }
+.micl-pane:has(.hhri-news-section) > div {
+  padding-block-start: 16px;
+}
 .hhri-news-section {
   display: flex;
 
@@ -54,7 +57,6 @@
 }
 .hhri-news-section > div {
   flex: 1;
-  padding-block-start: 16px;
 }
 .hhri-news-section .micl-card__content {
   color: var(--md-sys-color-on-surface);
