--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,9 @@
     <link rel="alternate" hreflang="es" href="https://henkpb.github.io/hhri/es">
     <link rel="alternate" hreflang="x-default" href="https://henkpb.github.io/hhri">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
-    <link rel="stylesheet" href="css/theme.css">
-    <link rel="stylesheet" href="css/micl.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/micl.css">
+    <link rel="stylesheet" href="assets/css/home.css">
   </head>
   <body class="micl-window dark">
     <main class="micl-body">
