--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -9,7 +9,6 @@
 .micl-window {
   max-inline-size: 1600px;
   margin-inline: auto;
-  background: linear-gradient(to bottom, rgb(from var(--md-sys-color-surface) r g b / 0.7), var(--md-sys-color-surface))
 }
 .micl-body {
   flex-direction: column;
@@ -58,12 +57,13 @@
 }
 .hhri-news-section > div {
   flex: 1;
+  background-color: var(--md-sys-color-secondary-container);
 }
 .hhri-news-section > h2 {
   white-space: normal;
 }
 .hhri-news-section .micl-card__content {
-  color: var(--md-sys-color-on-surface);
+  color: var(--md-sys-color-on-secondary-container);
 }
 .hhri-icon {
   font-family: 'hhri';
