--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -33,6 +33,7 @@
                 </div>
               </div>
             {% endif %}
+          <h1>{{ item.path }}</h1>
           {% endfor %}
         </div>
 
