--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -24,7 +24,7 @@
           {% for item in site.theme_gbv %}
             {% if item.path contains 'definitions/' %}
               <div class="micl-card-filled" tabindex="0">
-                <div class="micl-card__headline-m">
+                <div class="micl-card__headline-s">
                   <h2>{{ item.title }}</h2>
                 </div>
                 <p class="micl-card__supporting-text">{{ item.organization }}</p>
