--- a/assets/css/hhri.css
+++ b/assets/css/hhri.css
@@ -5,3 +5,14 @@
   font-style: normal;
   font-display: swap;
 }
+
+.micl-window {
+  max-inline-size: 1600px;
+  margin-inline: auto;
+}
+
+.hhri-icon {
+  font-family: 'hhri';
+  font-size: 56px;
+  color: var(--md-sys-color-on-surface);
+}
