--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
     <link rel="stylesheet" href="assets/css/theme.css">
     <link rel="stylesheet" href="assets/css/micl.css">
+    <link rel="stylesheet" href="assets/css/hhri.css">
     <link rel="stylesheet" href="assets/css/home.css">
   </head>
   <body class="micl-window dark">
